--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,9 @@
 <resources>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/color_primary</item>
+        <item name="colorPrimaryDark">@color/color_primary_dark</item>
+        <item name="colorAccent">@color/color_accent</item>
     </style>
 
     <style name="ListRate" parent="Widget.AppCompat.RatingBar.Small">
@@ -33,36 +33,19 @@
     </style>
 
     <style name="ExpandedTitleStyle" parent="@android:style/TextAppearance.Medium">
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">25sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
         <item name="android:shadowDy">0</item>
         <item name="android:shadowDx">0</item>
-        <item name="android:shadowRadius">9</item>
-        <item name="android:shadowColor">@android:color/black</item>
-        <item name="android:singleLine">false</item>
-    </style>
-
-    <style name="ExpandedSubTitleStyle" parent="@android:style/TextAppearance.Medium">
-        <item name="android:textSize">15sp</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:shadowDy">0</item>
-        <item name="android:shadowDx">0</item>
-        <item name="android:shadowRadius">7</item>
+        <item name="android:shadowRadius">10</item>
         <item name="android:shadowColor">@android:color/black</item>
     </style>
 
     <style name="CollapsedTitleStyle" parent="@android:style/TextAppearance.Medium">
-        <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="CollapsedSubTitleStyle" parent="@android:style/TextAppearance.Medium">
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textStyle">normal</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
