--- a/app/src/main/res/layout/fragment_daily_menu.xml
+++ b/app/src/main/res/layout/fragment_daily_menu.xml
@@ -24,8 +24,8 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center|start"
                 android:layout_marginStart="10dp"
-                android:gravity="center_vertical"
-                android:text="@string/results"
+                android:gravity="center_vertical|start"
+                android:text="@string/daily_menu"
                 android:textColor="@color/black"
                 android:textSize="20sp" />
 
@@ -33,7 +33,7 @@
                 android:id="@+id/create_menu_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center|end"
+                android:layout_gravity="center_vertical|end"
                 android:layout_marginEnd="10dp"
                 android:background="@drawable/button_find_background"
                 android:clickable="true"
