--- a/app/src/main/res/layout/fragment_ingredient_list.xml
+++ b/app/src/main/res/layout/fragment_ingredient_list.xml
@@ -21,11 +21,13 @@
                 android:id="@+id/find_recipes"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center|start"
+                android:layout_gravity="center_vertical|start"
+                android:layout_marginStart="10dp"
                 android:background="@drawable/button_find_background"
                 android:clickable="true"
                 android:enabled="false"
                 android:focusable="true"
+                android:padding="5dp"
                 android:text="@string/find"
                 android:textColor="@color/black"
                 android:textSize="20sp" />
@@ -38,15 +40,16 @@
         android:id="@+id/hint_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:elevation="5dp"
         android:gravity="center"
+        android:padding="15dp"
         android:text="@string/pick_recipe_instruction"
-        android:padding="10dp"
-        android:elevation="5dp"/>
+        android:textSize="15sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ingredient_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/appbar_ingredient"
-        tools:listitem="@layout/fragment_ingridient_item" />
+        tools:listitem="@layout/fragment_ingredient_item" />
 </RelativeLayout>
