--- a/app/src/main/res/menu/options_menu_ingridients_list.xml
+++ b/app/src/main/res/menu/options_menu_ingridients_list.xml
@@ -6,13 +6,19 @@
         android:id="@+id/options_add"
         android:icon="@drawable/add"
         android:title="@string/add_ingredient"
-        app:showAsAction="collapseActionView|ifRoom" />
+        app:showAsAction="collapseActionView|always" />
 
     <item
         android:id="@+id/options_ban"
         android:icon="@drawable/remove"
         android:title="@string/ban_ingredient"
-        app:showAsAction="collapseActionView|ifRoom" />
+        app:showAsAction="collapseActionView|always" />
+
+    <item
+        android:id="@+id/options_clear"
+        android:icon="@drawable/clear"
+        android:title="@string/clear_ingredient_list"
+        app:showAsAction="collapseActionView|always" />
 
     <item
         android:id="@+id/options_settings"
