--- a/app/src/main/res/layout/recipe_menu_page.xml
+++ b/app/src/main/res/layout/recipe_menu_page.xml
@@ -18,10 +18,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/full_recipe_button"
-        android:textColor="@color/black"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="5dp"
         android:textSize="25sp"
         tools:ignore="ContentDescription"
-        tools:text="Name" />
+        tools:text="Name"
+        android:textAppearance="@style/ExpandedTitleStyle"/>
 
     <Button
         android:id="@+id/full_recipe_button"
@@ -29,6 +31,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:padding="5dp"
+        android:background="@drawable/menu_page_button"
         android:text="@string/see_more"
         tools:ignore="ContentDescription" />
+
+
 </RelativeLayout>
