--- a/app/src/main/res/layout/fragment_cook_instruction.xml
+++ b/app/src/main/res/layout/fragment_cook_instruction.xml
@@ -9,6 +9,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="56dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -17,7 +18,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/instr_complexity_text"
+                android:id="@+id/ingestion_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -27,9 +28,30 @@
                 android:textColor="@color/black"
                 android:textSize="30sp" />
 
+            <TextView
+                android:id="@+id/type_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ingestion_name"
+                android:layout_marginStart="10dp"
+                android:text="@string/complexity"
+                android:textColor="@color/black"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/instr_complexity_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/type_name"
+                android:layout_marginStart="10dp"
+                android:text="@string/complexity"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+
             <RatingBar
                 android:id="@+id/instr_complexity"
                 style="@style/InstrRate"
+                android:layout_marginStart="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/instr_complexity_text"
@@ -83,7 +105,7 @@
                 android:layout_marginStart="10dp"
                 android:text="@string/ingredients_title"
                 android:textColor="@color/black"
-                android:textSize="30sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/instr_ingredients"
@@ -92,7 +114,7 @@
                 android:layout_below="@+id/instr_ingr_title"
                 android:layout_marginStart="10dp"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/instr_recipe_title"
@@ -102,7 +124,7 @@
                 android:layout_marginStart="10dp"
                 android:text="@string/recipe_title"
                 android:textColor="@color/black"
-                android:textSize="25sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/instr_recipe"
@@ -127,11 +149,11 @@
             android:layout_height="300dp"
             android:animateLayoutChanges="true"
             android:fitsSystemWindows="true"
-            app:expandedTitleTextAppearance="@style/ExpandedTitleStyle"
+            app:collapsedTitleGravity="start"
             app:collapsedTitleTextAppearance="@style/CollapsedTitleStyle"
             app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:collapsedTitleGravity="start">
+            app:expandedTitleTextAppearance="@style/ExpandedTitleStyle"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:id="@+id/instr_image"
