--- a/app/src/main/res/layout/fragment_ingredient_item.xml
+++ b/app/src/main/res/layout/fragment_ingredient_item.xml
@@ -12,7 +12,8 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:textColor="@color/black"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:layout_marginStart="15dp"/>
 
     <ImageView
         android:id="@+id/remove_ingredient"
@@ -21,6 +22,7 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:src="@drawable/clear"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        android:layout_marginEnd="15dp"/>
 
 </RelativeLayout>
