--- a/app/src/main/res/layout/fragment_recipe_item.xml
+++ b/app/src/main/res/layout/fragment_recipe_item.xml
@@ -53,20 +53,22 @@
         android:id="@+id/view_foreground"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@color/white"
+        android:background="@drawable/border_recipe_background"
         android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/dish_image"
             android:layout_width="150dp"
-            android:layout_height="200dp" />
+            android:layout_height="200dp"
+            android:layout_marginStart="8dp"/>
 
         <TextView
             android:id="@+id/dish_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_toEndOf="@id/dish_image"
             android:maxLength="40"
             android:textColor="@color/black"
@@ -76,7 +78,7 @@
             android:id="@+id/ingestion_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="8dp"
             android:layout_toEndOf="@id/dish_image"
             android:layout_below="@+id/dish_name"
             android:maxLength="40"
@@ -87,7 +89,7 @@
             android:id="@+id/type_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="8dp"
             android:layout_toEndOf="@id/dish_image"
             android:layout_below="@+id/ingestion_name"
             android:maxLength="40"
@@ -98,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/dish_complexity"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="8dp"
             android:layout_marginBottom="5dp"
             android:layout_toEndOf="@id/dish_image"
             android:text="@string/complexity"
@@ -113,8 +115,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="8dp"
             android:layout_toEndOf="@id/dish_image" />
 
         <RelativeLayout
