--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -13,12 +13,12 @@
 
     <item
         android:id="@+id/navigation_pick_recipe"
-        android:icon="@drawable/add"
+        android:icon="@drawable/nav_search"
         android:title="@string/pick_a_recipe" />
 
     <item
         android:id="@+id/navigation_create_menu"
-        android:icon="@drawable/cook_book"
+        android:icon="@drawable/daily_menu"
         android:title="@string/create_menu" />
 
     <item
