--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".activities.MainActivity">
 
     <ProgressBar
-        android:id="@+id/loading_data_progress_bar"
+        android:id="@+id/load_data"
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
