--- a/app/src/main/res/layout/custom_marker_content.xml
+++ b/app/src/main/res/layout/custom_marker_content.xml
@@ -4,19 +4,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/place_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:scaleType="centerCrop"
-        tools:src="@tools:sample/avatars"
-        android:layout_centerVertical="true"/>
-
     <RelativeLayout
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/place_image">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/place_title"
